# Insider-Threat-Detection

./: .gitignore  AlertObjectBuilder.ipynb  Alert_Object_Builder.ipynb  Anomaly_Score_Distribution.ipynb  Autoencoder.ipynb  CERT_Preprocessing.ipynb  CLAUDE.md  Dashboard.html  Hybrid_Risk_Surface.ipynb  Isolated_Forest.ipynb  Isolation_Forest.ipynb  Latent_Space_Visualizer.ipynb  README.md  Reconstruction_Error_Explainer.ipynb  Static_Dashboard.ipynb  config.py  live_replay.py  live_simulation.py  paths.local.example.py  prepare_data.ipynb  prepare_data.py  pyproject.toml  requirements.txt  ws_server.py
.claude/: settings.local.json
.claude/skills/analyze-data-integrity/: SKILL.md
.claude/skills/cleanup-documentation/: SKILL.md
.claude/skills/create-examples/: SKILL.md
.claude/skills/explain-function/: SKILL.md
.github/workflows/: ci.yml
dashboard/: README.md  alert_state.db  app.py  db.py
dashboard/assets/: login.css  styles.css
dashboard/lib/: __init__.py  aggregations.py  auth.py  data.py  filters.py  labels.py  live.py  theme.py  ui.py
dashboard/lib/pages/: __init__.py  alerts.py  channels.py  investigation.py  overview.py
docs/: CLEANUP_REPORT.md  PIPELINE.md
encoders/: encoder_details.txt
encoders/encoder_model_1/: notes.txt
encoders/encoder_model_2/: notes.txt
encoders/encoder_model_6/: metrics_ae.json
isolation_forests/: iforest_details.txt
isolation_forests/iforest_model_6/: metrics_if.json
processed_datasets/: dataset_notes.txt  live_results.jsonl  ueba_dataset_6_changes_report.md
processed_datasets/ueba_dataset_6/: pipeline_manifest.json  ueba_dataset_6_changes_report.md
scripts/: AlertObjectBuilder.py  AlertSequencer.py  AnomalyScoreDistribution.py  Autoencoder.py  HybridRiskScatter.py  LatentSpaceVisualizer.py  PeerBaselines.py  Preprocessing.py  ReconstructionErrorExplainer.py  SuppressionEngine.py  ThreatClassifier.py  UEBAIsolationForest.py  _shim.py  build_dashboard_dataset.py  build_merged_parquet.py  csv_to_parquet.py  risk_bands.py  upload_dashboard_dataset.py  upload_merged_parquet.py  upload_to_hf.py
src/ueba/: __init__.py  config.py  constants.py  risk.py
src/ueba/alerts/: builder.py  explainer.py
src/ueba/features/: preprocessing.py  work_hours.py
src/ueba/models/: data_prep.py
src/ueba/pipeline/: __init__.py  __main__.py  cli.py  manifest.py
src/ueba/pipeline/stages/: _util.py  build_alerts.py  build_dashboard.py  calibrate.py  explain.py  preprocess.py  train_ae.py  train_if.py
src/ueba/serving/: build_dashboard_dataset.py  hf_io.py  live_replay.py  live_simulation.py  upload_dashboard_dataset.py  upload_to_hf.py
src/ueba/viz/: anomaly_score_distribution.py  hybrid_risk_scatter.py
tests/: conftest.py
tests/dashboard/: conftest.py  test_aggregations.py  test_app_import.py  test_app_smoke.py
tests/unit/: test_alert_builder.py  test_dashboard_auth.py  test_dashboard_labels.py  test_db.py  test_insiders.py  test_live_scorer.py  test_manifest.py  test_model_matrix.py  test_risk.py  test_shims.py  test_splits.py  test_work_hours.py
tools/: check_notebooks.py
