[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ueba"
version = "0.1.0"
description = "UEBA insider-threat detection: feature pipeline, models, alerting, live scoring, and dashboard support"
requires-python = ">=3.12"
# Ranges deliberately admit the exact pins in requirements.txt (the hand-pinned
# Streamlit Cloud lockfile): pandas 3.0.3, numpy 2.4.6, pyarrow 24.0.0.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15",
]

[project.optional-dependencies]
# Training / scoring stack (notebooks, live_simulation, evaluation)
ml = [
    "tensorflow>=2.16",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "scipy>=1.12",
    "websockets>=12",
    "matplotlib>=3.8",
    "umap-learn>=0.5",
]
# Local dashboard development (Streamlit Cloud uses the pinned requirements.txt)
dashboard = [
    "streamlit>=1.40",
    "plotly>=5.20",
    "pyrebase4>=4.8",
    "huggingface_hub>=0.23",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "nbformat>=5.9",
    # Lightweight serving deps so the stub-model LiveScorer tests run in CI
    # (tensorflow stays out — the stubs replace the encoder).
    "joblib>=1.3",
    "websockets>=12",
    # Dashboard stack for the AppTest smoke test (tests/dashboard) — boots
    # dashboard/app.py headless. pyrebase is omitted: the smoke test uses the dev
    # auth bypass and the app imports pyrebase lazily, so login never runs.
    "streamlit>=1.40",
    "plotly>=5.20",
    "huggingface_hub>=0.23",
]

[project.scripts]
ueba-pipeline = "ueba.pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["*.ipynb", "legacy"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501", # line length — long plotly/pandas chains are idiomatic here
]

[tool.ruff.lint.per-file-ignores]
# Streamlit apps execute top-to-bottom: auth gates and st.set_page_config must
# run before heavy imports, so mid-file imports are intentional.
"dashboard/app.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
